namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-temporary-accommodation-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-temporary-accommodation-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "community-accommodation-service-tier-3-team"
    cloud-platform.justice.gov.uk/application: "Temporary Accommodation"
    cloud-platform.justice.gov.uk/owner: "Temporary Accommodation: cas3@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/approved-premises-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-temporary-accommodation"
    cloud-platform.justice.gov.uk/review-after: ""
